--- a/package.json
+++ b/package.json
@@ -10,14 +10,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.6",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "^7.3.11",
+    "@react-navigation/native": "^7.1.7",
+    "expo": "^53.0.7",
+    "expo-sqlite": "^15.2.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-dom": "^19.1.0",
+    "react-native": "^0.79.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-svg-web": "^1.0.9",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
+    "expo-av": "^15.1.4",
+    "expo-module-scripts": "^4.1.6",
     "typescript": "~5.8.3"
   },
   "private": true
